multilifting almost done